fixes header on mobile

--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -1,4 +1,11 @@
 .title {
+  @include media-query($on-mobile) {
+    font-size: 3.7rem;
+    left: 0;
+    margin: auto;
+    right: 0;
+    text-align: center;
+  };
   font-family: $title-font;
   font-size: 4.5rem;
 }
